--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "pellengine": "./bin/index.js"
   },
   "author": "Per Henrik Jakobsson",
-  "license": "ISC",
+  "license": "LGPL-3.0-only",
   "dependencies": {
     "@devicefarmer/adbkit": "^3.2.0",
     "adm-zip": "^0.5.5",
